# MonitorSystemQt

./: .gitignore  CMakeLists.txt  README.md  satelliteUDP.pro
config/: base_config.json  commu_config.json  config.json
docs/: QT软件使用文档.docx
inc/core/: base.h  communication.h  data_processor.h  diagnosis_win.h  monitor_system.h  visualization_window.h
inc/ui/: ui_diagnosis_win.h  ui_visualization_window.h
inc/utils/: config_manager.h  utils.h
resources/: Resources.qrc
src/core/: communication.cpp  data_processor.cpp  diagnosis_win.cpp  main.cpp  monitor_system.cpp  visualization_window.cpp
src/ui/: diagnosis_win.ui  ui.bat  visualization_window.ui
src/utils/: config_manager.cpp  utils.cpp
tests/: CMakeLists.txt  test_udpclient.cpp
